Cambios en frontend graficos todos

--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -13,11 +13,11 @@
         </a>
 
         <a routerLink="/" class="logo logo-light">
-          <span class="logo-sm">
-            <img src="assets/images/logo-light.svg" alt="" height="22">
+          <span class="logo-sm  align-items-center">
+            <img src="assets/images/logo-light1.svg" alt="" height="18">
           </span>
           <span class="logo-lg">
-            <img src="assets/images/logo-light.png" alt="" height="19">
+            <img src="assets/images/logo-light.png" alt="" height="45">
           </span>
         </a>
       </div>
