--- a/src/app/pages/reports/by-coordinator/by-coordinator.component.html
+++ b/src/app/pages/reports/by-coordinator/by-coordinator.component.html
@@ -1,1 +1,17 @@
-<canvas id="chart"> {{chart}}</canvas>
+<div class="container">
+    <div class="card" >
+      <div class="card-header">
+        <h2>Reporte Por Coordinador</h2>
+      </div>
+      <div class="row my-3">
+        <div class="col-md-6 text-center">
+          <h2>Gráfico</h2>
+          <canvas id="chart"> {{chart}}</canvas>
+        </div>
+        <div class="col-md-6 text-center">
+          <h2>Tabla de Ventas por Coordinador</h2>
+          <div id="idContTabla"> </div>
+        </div>
+      </div>
+    </div>
+</div>
