--- a/src/app/pages/reports/by-coordinator/by-coordinator.component.html
+++ b/src/app/pages/reports/by-coordinator/by-coordinator.component.html
@@ -3,14 +3,78 @@
       <div class="card-header">
         <h2>Reporte Por Coordinador</h2>
       </div>
+      <div class="col-12 py-6 ">
+              
+        <form action="http://localhost:4200/sale">
+          <label>
+            Desde:
+            <input type="date" name="bday" />
+          </label>
+          <label>
+            Hasta:
+            <input type="date" name="bday" />
+          </label>
+          <button class="search-btn" type="submit">   <span>Buscar</span>     </button> 
+        
+          <!-- <p><button>Buscar Reporte</button></p> -->
+        </form>
+        
+    </div>
       <div class="row my-3">
         <div class="col-md-6 text-center">
-          <h2>Gráfico</h2>
+          <h2>Gráfico de Coordinador</h2>
           <canvas id="chart"> {{chart}}</canvas>
         </div>
         <div class="col-md-6 text-center">
           <h2>Tabla de Ventas por Coordinador</h2>
-          <div id="idContTabla"> </div>
+          <div id="idContTabla"> </div>          
+            <div class="table-responsive">
+                  <table class="table table-success ">
+                    <thead>
+                      <tr class="table-secondary">
+                        <th>Coordinador</th>            
+                        <th>Comercial</th>                      
+                        <th>N° Ventas</th>
+                        <th>Servicio</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                      <td rowspan="3">Tifani </td>
+                      <td> Maroki</td>
+                      <td> 2</td>
+                      <td> Línea Móvil</td>
+                    </tr>
+                    <tr>
+                      <td> Liz</td>
+                      <td> 3</td>
+                      <td> Línea Fija</td>
+                    </tr>
+                    <tr>
+                      <td> Zumi</td>
+                      <td> 4</td>
+                      <td> Línea Fija</td>
+                    </tr>
+                    <tr>
+                      <td rowspan="3">Greisy</td>
+                      <td> Maroki</td>
+                      <td> 2</td>
+                      <td> Línea Móvil</td>
+                    </tr>
+                    <tr>
+                      <td> Liz</td>
+                      <td> 3</td>
+                      <td> Línea Fija</td>
+                    </tr>
+                    <tr>
+                      <td> Zumi</td>
+                      <td> 4</td>
+                      <td> Línea Fija</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+             
         </div>
       </div>
     </div>
