Cambios en frontend

--- a/src/app/pages/reports/by-coordinator/by-coordinator.component.html
+++ b/src/app/pages/reports/by-coordinator/by-coordinator.component.html
@@ -62,14 +62,14 @@
                       <td> Línea Móvil</td>
                     </tr>
                     <tr>
-                      <td> Liz</td>
+                      <td> Rosa</td>
                       <td> 3</td>
                       <td> Línea Fija</td>
                     </tr>
                     <tr>
-                      <td> Zumi</td>
+                      <td> Maria</td>
                       <td> 4</td>
-                      <td> Línea Fija</td>
+                      <td> Línea Móvil</td>
                     </tr>
                     </tbody>
                   </table>
