--- a/src/app/pages/reports/all/all.component.html
+++ b/src/app/pages/reports/all/all.component.html
@@ -43,15 +43,15 @@
             </div>
             <div class="col-12 py-6 ">
               
-                <form action="http://localhost:4200/sale">
+                <form action="http://localhost:4200/reports">
                   <label>
                     Desde:
                     <input type="date" name="bday" />
-                  </label>
+                  </label>&nbsp; 
                   <label>
                     Hasta:
                     <input type="date" name="bday" />
-                  </label>
+                  </label> &nbsp; 
                   <button class="search-btn" type="submit">   <span>Buscar</span>     </button> 
                 
                   <!-- <p><button>Buscar Reporte</button></p> -->
@@ -113,7 +113,7 @@
           <div class="row my-3">
             <div class="col-md-6 text-center">
               <h2>Reporte de Ventas por Comercial</h2>
-              <canvas id="chart"> {{chart}}</canvas>
+              
             </div>
             <div class="col-md-6 text-center">
               <h2>Tabla de Ventas por Comercial</h2>
@@ -157,7 +157,7 @@
           <div class="row my-3">
             <div class="col-md-6 text-center">
               <h2>Reporte de Ventas por Coordinador</h2>
-              <canvas id="chart"> {{chart}}</canvas>
+              
             </div>
             <div class="col-md-6 text-center">
               <h2>Tabla de Ventas por Coordinador</h2>
