--- a/src/app/pages/reports/by-commercial/by-commercial.component.html
+++ b/src/app/pages/reports/by-commercial/by-commercial.component.html
@@ -3,22 +3,19 @@
       <div class="card-header">
         <h2>Reporte Por Comercial</h2>
       </div>
-      <div class="col-12 py-6 ">
-              
+      <div class="col-12 py-6 ">              
         <form action="http://localhost:4200/sale">
           <label>
             Desde:
             <input type="date" name="bday" />
-          </label>
+          </label>&nbsp; 
           <label>
             Hasta:
             <input type="date" name="bday" />
-          </label>
-          <button class="search-btn" type="submit">   <span>Buscar</span>     </button> 
-        
+          </label>&nbsp; 
+          <button class="search-btn" type="submit">   <span>Buscar</span>     </button>         
         </form>
-        
-    </div>
+      </div>
       <div class="row my-3">
         <div class="col-md-6 text-center">
           <h2>Gráfico de Comercial</h2>
@@ -57,7 +54,6 @@
                   <td> 4</td>
                   <td> Línea Fija</td>
                 </tr>
-
               </tbody>
             </table>
           </div>
