--- a/src/app/pages/reports/by-coordinator/by-coordinator.component.html
+++ b/src/app/pages/reports/by-coordinator/by-coordinator.component.html
@@ -9,11 +9,11 @@
           <label>
             Desde:
             <input type="date" name="bday" />
-          </label>
+          </label>&nbsp; 
           <label>
             Hasta:
             <input type="date" name="bday" />
-          </label>
+          </label>&nbsp; 
           <button class="search-btn" type="submit">   <span>Buscar</span>     </button> 
         
           <!-- <p><button>Buscar Reporte</button></p> -->
