Cambios en frontend

--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -98,7 +98,7 @@
         <div class="mt-5 text-center">
           <p>¿No tiene una cuenta? <a routerLink="/account/signup" class="fw-medium text-primary"> Regístrate ahora
             </a> </p>
-          <p>© {{year}} Midas Solutions Center.  Creado por <i class="mdi mdi-heart text-danger"></i> Jhoeky Tapia</p>
+          <p>© {{year}} Midas Solutions Center.  Creado por <i class="mdi mdi-heart text-danger"></i> Desarrolladores Midas</p>
         </div>
 
       </div>
