Cambios en frontend unifi

--- a/src/app/pages/settings/type-user-permission/type-user-permission.component.html
+++ b/src/app/pages/settings/type-user-permission/type-user-permission.component.html
@@ -1,6 +1,13 @@
 <div class="container-fluid">
   <app-page-title [title]="titleBreadCrumb" [breadcrumbItems]="breadCrumbItems"></app-page-title>
 
+  <select name="select"><p>Tipo de Usuario</p>
+    <option value="value1">Coordinador</option>
+    <option value="value2" selected>BackOfice</option>
+    <option value="value3">Vendedor</option>
+  </select>
+
+
   <div class="module-container">
     <table class="table">
       <thead>
